--- a/.portfolio/contact.html
+++ b/.portfolio/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Contact — Your Name Portfolio</title>
+  <title>Contact — RAFAY Portfolio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Google Font -->
@@ -17,7 +17,7 @@
 <nav>
   <!-- Logo - clicking returns to home -->
   <div class="logo">
-    <a href="index.html">YourName</a>
+    <a href="index.html">ABDUL RAFAY SIDDIQUE</a>
   </div>
 
   <!-- Navigation links -->
@@ -135,19 +135,19 @@
     <div class="contact-info">
       <div class="info-card">
         <h4>📧 Email</h4>
-        <p>yourname@email.com</p>
-        <a href="mailto:yourname@email.com" style="color: #6c63ff; text-decoration: none; font-size: 14px;">Send Email</a>
+        <p>contact@rafay.com</p>
+        <a href="mailto:abdulrafay1css@gmail.com" style="color: #6c63ff; text-decoration: none; font-size: 14px;">Send Email</a>
       </div>
 
       <div class="info-card">
         <h4>📱 Phone</h4>
-        <p>+1 234 567 890</p>
-        <a href="tel:+1234567890" style="color: #6c63ff; text-decoration: none; font-size: 14px;">Call Now</a>
+        <p>+92 310 5315886</p>
+        <a href="tel:+923105315886" style="color: #6c63ff; text-decoration: none; font-size: 14px;">Call Now</a>
       </div>
 
       <div class="info-card">
         <h4>📍 Location</h4>
-        <p>Your City, Country</p>
+        <p>Wah Cantt, Pakistan</p>
         <p style="font-size: 14px; opacity: 0.7;">Available for remote work</p>
       </div>
     </div>
@@ -156,11 +156,11 @@
     <div style="margin-top: 40px; text-align: center;">
       <h3 style="margin-bottom: 20px; font-size: 18px;">Connect With Me</h3>
       <div class="socials">
-        <a href="#" target="_blank" style="margin: 0 15px; color: #6c63ff; text-decoration: none; font-size: 16px;">Instagram</a>
-        <a href="#" target="_blank" style="margin: 0 15px; color: #6c63ff; text-decoration: none; font-size: 16px;">Behance</a>
-        <a href="#" target="_blank" style="margin: 0 15px; color: #6c63ff; text-decoration: none; font-size: 16px;">LinkedIn</a>
+        <a href="https://www.instagram.com/rafay.the111" target="_blank" style="margin: 0 15px; color: #6c63ff; text-decoration: none; font-size: 16px;">Instagram</a>
+        <a href="https://www.behance.net/abdulrafay-css" target="_blank" style="margin: 0 15px; color: #6c63ff; text-decoration: none; font-size: 16px;">Behance</a>
+        <a href="https://www.linkedin.com/in/abdulrafay-css" target="_blank" style="margin: 0 15px; color: #6c63ff; text-decoration: none; font-size: 16px;">LinkedIn</a>
         <a href="#" target="_blank" style="margin: 0 15px; color: #6c63ff; text-decoration: none; font-size: 16px;">Dribbble</a>
-        <a href="#" target="_blank" style="margin: 0 15px; color: #6c63ff; text-decoration: none; font-size: 16px;">GitHub</a>
+        <a href="https://www.github.com/abdulrafay-css" target="_blank" style="margin: 0 15px; color: #6c63ff; text-decoration: none; font-size: 16px;">GitHub</a>
       </div>
     </div>
 
@@ -173,15 +173,15 @@
 </section>
 
 <!-- ==================== FOOTER ==================== -->
-<footer>
-  <h3>Your Name</h3>
+<footer id="contact">
+  <h3>Abdul Rafay Siddique</h3>
   <p>Graphic Designer & Creative Professional</p>
-  <p>Email: yourname@email.com | Phone: +1 234 567 890</p>
+  <p>Email: abdulrafay1css@gmail.com | Phone: +92 310 5315886</p>
   <div class="socials">
-    <a href="#" target="_blank">Instagram</a>
-    <a href="#" target="_blank">Behance</a>
-    <a href="#" target="_blank">GitHub</a>
-    <a href="#" target="_blank">LinkedIn</a>
+    <a href="https://www.instagram.com/rafay.the111" target="_blank">Instagram</a>
+    <a href="https://www.behance.net/abdulrafay-css" target="_blank">Behance</a>
+    <a href="https://www.github.com/abdulrafay-css" target="_blank">GitHub</a>
+    <a href="https://www.linkedin.com/in/abdulrafay-css" target="_blank">LinkedIn</a>
   </div>
   <p style="margin-top: 30px; opacity: 0.6; font-size: 14px;">© 2024 Your Name. All rights reserved.</p>
 </footer>
