--- a/.portfolio/index.html
+++ b/.portfolio/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <title>Your Name — Portfolio</title>
+    <title>Abdul Rafay — Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Google Font -->
@@ -17,7 +17,7 @@
 <nav>
     <!-- Logo - clicking returns to home -->
     <div class="logo">
-        <a href="index.html">YourName</a>
+        <a href="index.html">ABDUL RAFAY SIDDIQUE</a>
     </div>
 
     <!-- Navigation links -->
@@ -160,14 +160,14 @@
 
 <!-- ==================== FOOTER ==================== -->
 <footer id="contact">
-    <h3>Your Name</h3>
+    <h3>Abdul Rafay Siddique</h3>
     <p>Graphic Designer & Creative Professional</p>
-    <p>Email: yourname@email.com | Phone: +1 234 567 890</p>
+    <p>Email: abdulrafay1css@gmail.com | Phone: +92 310 5315886</p>
     <div class="socials">
-        <a href="#" target="_blank">Instagram</a>
-        <a href="#" target="_blank">Behance</a>
-        <a href="#" target="_blank">GitHub</a>
-        <a href="#" target="_blank">LinkedIn</a>
+        <a href="https://www.instagram.com/rafay.the111" target="_blank">Instagram</a>
+        <a href="https://www.behance.net/abdulrafay-css" target="_blank">Behance</a>
+        <a href="https://www.github.com/abdulrafay-css" target="_blank">GitHub</a>
+        <a href="https://www.linkedin.com/in/abdulrafay-css" target="_blank">LinkedIn</a>
     </div>
     <p style="margin-top: 30px; opacity: 0.6; font-size: 14px;">© 2024 Your Name. All rights reserved.</p>
 </footer>
