--- a/.portfolio/index.html
+++ b/.portfolio/index.html
@@ -33,7 +33,7 @@
                     <h4>Design Projects</h4>
                     <a href="logo.html">Logo Design</a>
                     <a href="branding.html">Brand Identity</a>
-                    <a href="brochure.html">Brochure Design</a>
+                    <a href="poster.html">Poster Design</a>
                     <a href="presentation.html">Presentation Design</a>
                     <a href="social.html">Social Media</a>
                     <a href="experimental.html">Experimental</a>
