--- a/.portfolio/webdev-portfolio.html
+++ b/.portfolio/webdev-portfolio.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Logo Design — RAFAY Portfolio</title>
+  <title>Branding — RAFAY Portfolio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Google Font -->
@@ -29,7 +29,7 @@
           <h4>Design Projects</h4>
           <a href="logo.html">Logo Design</a>
           <a href="branding.html">Brand Identity</a>
-          <a href="poster.html">Poster Design</a>
+          <a href="brochure.html">Brochure Design</a>
           <a href="presentation.html">Presentation Design</a>
           <a href="social.html">Social Media</a>
           <a href="experimental.html">Experimental</a>
@@ -65,7 +65,7 @@
 <section class="project-page">
   <!-- Page Header -->
   <div class="page-header reveal">
-    <h1>Logo Design</h1>
+    <h1>BRAND IDENTITY</h1>
     <p>Creating memorable brand marks and identity systems that leave lasting impressions</p>
   </div>
 
