--- a/.portfolio/index.html
+++ b/.portfolio/index.html
@@ -82,6 +82,14 @@
 <!-- ==================== FEATURED WORKS SECTION ==================== -->
 <section class="works">
     <h2 class="section-title reveal">Featured Projects</h2>
+    <div class="grid">
+    <div class="card reveal">
+        <img src="https://picsum.photos/500/400?1" alt="Brand Identity Project">
+        <div class="card-content">
+            <h3>FOUNDER AT</h3>
+            <span>TecXora</span>
+        </div>
+    </div>
 
     <div class="grid">
         <!-- Project Card 1 -->
