--- a/.portfolio/about.html
+++ b/.portfolio/about.html
@@ -74,7 +74,7 @@
   <div class="about-container">
     <!-- Profile image placeholder with animation -->
     <div class="about-image reveal">
-      👨‍💻
+      <img src="Document.png">
     </div>
 
     <!-- About content -->
