--- a/.portfolio/about.html
+++ b/.portfolio/about.html
@@ -92,6 +92,7 @@
       <div class="skills">
         <h3>Skills & Expertise</h3>
         <div class="skill-tags">
+          <span class="skill-tag">TecXora</span>
           <span class="skill-tag">Adobe Photoshop</span>
           <span class="skill-tag">Illustrator</span>
           <span class="skill-tag">InDesign</span>
@@ -110,6 +111,7 @@
           <span class="skill-tag">Canva</span>
           <span class="skill-tag">Davinci Resolve</span>
           <span class="skill-tag">Blender</span>
+          <span class="skill-tag">Affinity</span>
         </div>
       </div>
     </div>
