--- a/.portfolio/poster.html
+++ b/.portfolio/poster.html
@@ -75,7 +75,7 @@
     <div class="card reveal">
       <img src="https://picsum.photos/500/400?random=1" alt="Tech Startup Logo">
       <div class="card-content">
-        <h3>Tech Startup Logo</h3>
+        <h3>Tech Startup Poster</h3>
         <span>Brand Mark Design</span>
         <p style="margin-top: 10px; opacity: 0.8; font-size: 14px;">Modern minimalist logo for a SaaS company</p>
       </div>
@@ -85,7 +85,7 @@
     <div class="card reveal">
       <img src="https://picsum.photos/500/400?random=2" alt="Coffee Shop Logo">
       <div class="card-content">
-        <h3>Coffee Shop Logo</h3>
+        <h3>Product Poster </h3>
         <span>Identity Design</span>
         <p style="margin-top: 10px; opacity: 0.8; font-size: 14px;">Warm and inviting brand identity for local cafe</p>
       </div>
